[ Edit ] edited the broken usage link

--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@ We do not store any of your data in its plain form, we only store it in its encr
                     </a>
                   </li>
                   <li>
-                    <a href="https://docs.langsync.app/usage" rel="nofollow noopner" target="_blank">
+                    <a href="https://docs.langsync.app/cli-usage/auth" rel="nofollow noopner" target="_blank">
                       Usage
                     </a>
                     <li>
