[ Add ] added beta tag

--- a/index.html
+++ b/index.html
@@ -136,9 +136,13 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
-                AI Powered tool for Localizing Your Software on the Fly
-              </h1>
+              <div class="title-div">
+                <div>Beta</div>
+                <h1 class="ud-hero-title">
+                  AI Powered tool for Localizing Your Software on the Fly
+                </h1>
+
+              </div>
               <p class="ud-hero-desc">
                 Elevate your software localization game with LangSync, a
                 cutting-edge AI-powered tool for localizing your software project with a single command.
