--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <div class="title-div">
-                <div>Beta</div>
+                <a href="https://docs.langsync.app">
+                  <div>Beta</div>
+                </a>
                 <h1 class="ud-hero-title">
                   AI Powered tool for Localizing Your Software on the Fly
                 </h1>
