[ Add ] added a social media cover

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <meta property="og:url" content="https://langsync.app">
 <meta property="og:title" content="LangSync - an AI command line tool for localizing your software on the fly.">
 <meta property="og:description" content="Elevate your software localization game with LangSync, a cutting-edge AI-powered command line tool. Say goodbye to time-consuming localization processes, and let LangSync seamlessly adapt your software for global audiences in real-time. Our innovative solution empowers developers to effortlessly localize their applications, making them accessible and user-friendly for diverse language markets. Discover the future of software localization with LangSync today.">
-<meta property="og:image" content="//TODO: cover">
+<meta property="og:image" content="./assets/images/hero/cover.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://langsync.app">
 <meta property="twitter:title" content="LangSync - an AI command line tool for localizing your software on the fly.">
 <meta property="twitter:description" content="Elevate your software localization game with LangSync, a cutting-edge AI-powered command line tool. Say goodbye to time-consuming localization processes, and let LangSync seamlessly adapt your software for global audiences in real-time. Our innovative solution empowers developers to effortlessly localize their applications, making them accessible and user-friendly for diverse language markets. Discover the future of software localization with LangSync today.">
-<meta property="twitter:image" content="//TODO: cover">
+<meta property="twitter:image" content="./assets/images/hero/cover.png">
 
     <!--====== Favicon Icon ======-->
     <link
