--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#contact">Contact</a>
                   </li>
+                  <li class="nav-item">
+<a target="_blank" href="https://www.producthunt.com/products/lang-sync">
+                <i class="lni lni-producthunt product-hunt"></i>
+</a>                  </li>
                   <!-- <li class="nav-item nav-item-has-children">
                     <a href="javascript:void(0)"> Pages </a>
                     <ul class="ud-submenu">
