[ Add ] added frameworks and launguages slider section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leave Behind Localization Frustrations: Embrace AI for Instant Software Globalization.</title>
+    <title>Localize in seconds,
+    Reach Everyone in The World.</title>
 
     <!-- Primary Meta Tags -->
 <meta name="title" content="Localize in seconds,<br> Reach Everyone in The World.">
@@ -39,6 +40,12 @@
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/lineicons.css" />
     <link rel="stylesheet" href="assets/css/ud-styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+  
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
   </head>
   <body>
     <!-- ====== Header Start ====== -->
@@ -200,7 +207,7 @@
               <span>Features</span>
               <h2>Discover the Powerhouse Features of LangSync</h2>
               <p>
-These Key Features Make LangSync the Ultimate Software Localization Tool.
+                 These Key Features Make LangSync the Ultimate Software Localization Tool.
               </p>
             </div>
           </div>
@@ -229,7 +236,7 @@ solution ensures that your software seamlessly adapts to its specific context, m
               <div class="ud-feature-content">
                 <h3 class="ud-feature-title">Accurate and Precise</h3>
                 <p class="ud-feature-desc">
-"LangSync stands out for its exceptional accuracy and precision. Our cutting-edge technology guarantees not only
+LangSync stands out for its exceptional accuracy and precision. Our cutting-edge technology guarantees not only
 accurate translations but also an unmatched contextual fit. We ensure that translations seamlessly integrate with the
 context of your content.
                 </p>
@@ -272,36 +279,32 @@ direct, no-nonsense commands to achieve your goals without any unnecessary clutt
     </section>
     <!-- ====== Features End ====== -->
 
-    <!-- ====== About Start ====== -->
-    <!-- <section id="about" class="ud-about">
+    
+    <section id="about" class="ud-about">
       <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
-          <div class="ud-about-content-wrapper">
-            <div class="ud-about-content">
-              <span class="tag">About Us</span>
-              <h2>Brilliant Toolkit to Build Nextgen Website Faster.</h2>
-              <p>
-                The main ‘thrust’ is to focus on educating attendees on how to
-                best protect highly vulnerable business applications with
-                interactive panel discussions and roundtables led by subject
-                matter experts.
-              </p>
-
-              <p>
-                The main ‘thrust’ is to focus on educating attendees on how to
-                best protect highly vulnerable business applications with
-                interactive panel.
-              </p>
-              <a href="javascript:void(0)" class="ud-main-btn">Learn More</a>
-            </div>
-          </div>
-          <div class="ud-about-image">
-            <img src="assets/images/about/about-image.svg" alt="about-image" />
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="ud-section-title">
+            <!-- <span></span> -->
+            <h2>
+              Universal Localization for All Your Software Projects
+            </h2>
+            <p>
+               You can use it with any project, whether it's a website, a mobile app, a desktop app, a game, or simply any other project built with any programming language or framework. 
+            </p>
           </div>
         </div>
       </div>
-    </section> -->
-    <!-- ====== About End ====== -->
+<div class="logo-slider-1" dir="rtl">
+
+</div>
+<br><br><br><br>
+<div class="logo-slider-2">
+
+</div>
+
+      </div>
+    </section>
 
     <!-- ====== Pricing Start ====== -->
     <section id="pricing" class="ud-pricing">
@@ -1060,5 +1063,7 @@ We do not store any of your data in its plain form, we only store it in its encr
 
       window.document.addEventListener("scroll", onScroll);
     </script>
+
+ 
   </body>
 </html>
