[ Add, Edit ] added medium url, changed the main illustration

--- a/index.html
+++ b/index.html
@@ -884,13 +884,17 @@ We do not store any of your data in its plain form, we only store it in its encr
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
-                    <a href="https://twitter.com/langsync">
+                    <a target="_blank" href="https://twitter.com/langsync">
                       <i class="lni lni-twitter-filled"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="https://github.com/LangSync/issues_tracker">
+                    <a target="_blank" href="https://github.com/LangSync/issues_tracker">
                       <i class="lni lni-github-original"></i>
+                    </a>
+                  </li><li>
+                    <a target="_blank" href="https://medium.com/@langsync">
+                      <i class="lni lni-medium"></i>
                     </a>
                   </li>
                   </ul>
