[ Add ] added facebook page link

--- a/index.html
+++ b/index.html
@@ -887,6 +887,10 @@ We do not store any of your data in its plain form, we only store it in its encr
                     <a target="_blank" href="https://twitter.com/langsync">
                       <i class="lni lni-twitter-filled"></i>
                     </a>
+                  </li><li>
+                    <a target="_blank" href="https://web.facebook.com/61552799124320/">
+                      <i class="lni lni-facebook-filled"></i>
+                    </a>
                   </li>
                   <li>
                     <a target="_blank" href="https://github.com/LangSync/issues_tracker">
