[ Edit ] returned the email secttion

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@ We do not store any of your data in its plain form, we only store it in its encr
                     <p>Marrakech, Morocco</p>
                   </div>
                 </div>
-                <!-- <div class="ud-single-info">
+                <div class="ud-single-info">
                   <div class="ud-info-icon">
                     <i class="lni lni-envelope"></i>
                   </div>
@@ -794,7 +794,7 @@ We do not store any of your data in its plain form, we only store it in its encr
                     <h5>How Can We Help?</h5>
                     <p>contact@langsync.app</p>
                   </div>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
@@ -809,40 +809,7 @@ We do not store any of your data in its plain form, we only store it in its encr
               title="Contact LangSync Team"></iframe>
             <script>var d = document, w = "https://tally.so/widgets/embed.js", v = function () { "undefined" != typeof Tally ? Tally.loadEmbeds() : d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function (e) { e.src = e.dataset.tallySrc })) }; if ("undefined" != typeof Tally) v(); else if (d.querySelector('script[src="' + w + '"]') == null) { var s = d.createElement("script"); s.src = w, s.onload = v, s.onerror = v, d.body.appendChild(s); }</script>
 
-              <!-- <form class="ud-contact-form" 
-              action=""
-              >
-                <div class="ud-form-group">
-                  <label for="fullName">Full Name*</label>
-                  <input
-                    type="text"
-                    name="fullName"
-                    placeholder="John Doe"
-                  />
-                </div>
-                <div class="ud-form-group">
-                  <label for="email">Email*</label>
-                  <input
-                    type="email"
-                    name="email"
-                    placeholder="example@something.com"
-                  />
-                </div>
-              
-                <div class="ud-form-group">
-                  <label for="message">Message*</label>
-                  <textarea
-                    name="message"
-                    rows="3"
-                    placeholder="type your message here"
-                  ></textarea>
-                </div>
-                <div class="ud-form-group mb-0">
-                  <button type="submit" class="ud-main-btn">
-                    Send Message
-                  </button>
-                </div>
-              </form> -->
+
             </div>
           </div>
         </div>
