[ Edit ] edited the main title

--- a/index.html
+++ b/index.html
@@ -183,10 +183,7 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <div class="title-div">
-                <a href="https://docs.langsync.app">
-                  <div>Beta</div>
-                </a>
-                <h1 class="ud-hero-title">
+                <h1 class="ud-hero-title text-gradient">
                   Localize in seconds,<br />
                   Reach Everyone in The World.
                 </h1>
