[ Edit ] update landing page

--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@
           <div class="col-lg-4 col-md-6 col-sm-10">
             <div class="ud-single-pricing first-item" data-wow-delay=".15s">
               <div class="ud-pricing-header">
-                <h3>Teams</h3>
-                <h4>$ 49.99/mo</h4>
+                <h3>Starter</h3>
+                <h4>FREE</h4>
               </div>
               <div class="ud-pricing-body">
                 <ul>
@@ -537,50 +537,60 @@
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
 
-                    Fast & optimized Localization (AI Powered)
+                    Fast & Optimized Localization (AI Powered)
+
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
 
-                    Full Automation Support
+                   Full Automation Support
+
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
 
-                    Full API Access
+                    Limited API Access
+
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
 
-                    Full CLI Access
+                    Limited CLI Access
+
                   </li>
 
+                  
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
-
-                    <b>Unlimited</b> Languages Localization Number Per Call
-                  </li>
-                  <li>
-                    <i
-                      class="lni lni-checkmark-circle list-style-icon green-icon"
-                    ></i>
-
-                    1000 characters for AI instruction per call
+Maximum <b> 150 </b> Characters for AI Instruction per Call
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon green-icon"
                     ></i>
+                    Maximum <b>1500</b> Input Characters per Call
 
-                    <b>Unlimited</b> Calls Limit Per Month
+                  </li>
+                  <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon green-icon"
+                    ></i>
+Up to <b>3</b> Languages Localized per Call
+
+                  </li>
+                  <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon green-icon"
+                    ></i>
+Up to <b>30</b> Localization Calls per Month
                   </li>
                 </ul>
               </div>
@@ -590,7 +600,7 @@
                   href="https://my.langsync.app"
                   class="ud-main-btn ud-border-btn"
                 >
-                  Purchase Now
+                  Get Started
                 </a>
               </div>
             </div>
@@ -603,7 +613,7 @@
               <span class="ud-popular-tag">Popular</span>
               <div class="ud-pricing-header">
                 <h3>Individual</h3>
-                <h4>$ 9.99/mo</h4>
+                <h4>$ 19.99/mo</h4>
               </div>
               <div class="ud-pricing-body">
                 <ul>
@@ -612,28 +622,26 @@
                       class="lni lni-checkmark-circle list-style-icon white-icon"
                     ></i>
 
-                    Fast & optimized Localization (AI Powered)
+                  Blazing Fast & Optimized Localization (AI Powered)  
+                  </li>
+                  <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon white-icon"
+                    ></i>
+                   Full Automation Support for Streamlined Workflow
+                  </li>
+                  <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon white-icon"
+                    ></i>
+API Access for Seamless Integration
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon white-icon"
                     ></i>
 
-                    Full Automation Support
-                  </li>
-                  <li>
-                    <i
-                      class="lni lni-checkmark-circle list-style-icon white-icon"
-                    ></i>
-
-                    Full API Access
-                  </li>
-                  <li>
-                    <i
-                      class="lni lni-checkmark-circle list-style-icon white-icon"
-                    ></i>
-
-                    Full CLI Access
+Full CLI Access for Command-Line Efficiency
                   </li>
 
                   <li>
@@ -641,14 +649,14 @@
                       class="lni lni-checkmark-circle list-style-icon white-icon"
                     ></i>
 
-                    3 Languages Localization Number Per Call
+Generous <b>1000</b> Characters for AI Instruction per Call
                   </li>
                   <li>
                     <i
                       class="lni lni-checkmark-circle list-style-icon white-icon"
                     ></i>
 
-                    110 characters for AI instruction per call
+Expanded <b>40000</b> Input Characters per Call for Larger Content
                   </li>
 
                   <li>
@@ -656,7 +664,22 @@
                       class="lni lni-checkmark-circle list-style-icon white-icon"
                     ></i>
 
-                    350 Calls Limit Per Month
+Unlimited Languages Localized per Call
+                  </li>
+                <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon white-icon"
+                    ></i>
+
+Unlimited Localization Calls per Month
+                  </li>
+
+                    <li>
+                    <i
+                      class="lni lni-checkmark-circle list-style-icon white-icon"
+                    ></i>
+
+Priority Support with Dedicated Assistance
                   </li>
                 </ul>
               </div>
